# celery_project_model

./: README.md  docker-compose.yml  env.env  pyproject.toml
src/: celery_app.py  celeryconfig.py  send_task.py  settings.py
src/tasks/: send_form.py
